# resume-agent

./: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
examples/: sample_jd.txt  sample_resume.txt
resume_analyzer/: __init__.py  analyzer.py  cli.py  extract.py  match.py  models.py  normalize.py  score.py  synonyms.py
resume_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_analyzer_e2e.py  test_api_validation.py  test_cli_validation.py  test_extract.py  test_match.py  test_normalize.py  test_score.py  test_synonyms.py
