[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-analyzer"
version = "1.0.0"
description = "Lightweight resume vs. job-description keyword analyzer with deterministic scoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.8.0", "httpx>=0.27.0"]

[project.scripts]
resume-analyzer = "resume_analyzer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
